jenkins-route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: julianjenkins
spec:
  host: julianjenkins.apps.cluster5.karoshi.se
  port:
    targetPort: 8080
  to:
    kind: Service
    name: julianjenkins
    weight: 100
  wildcardPolicy: None
